--- a/_index.yaml
+++ b/_index.yaml
@@ -1,8 +1,1 @@
-- title: Introduction to Cloud Security
-  file: 01_intro_cloud.md
-- title: IAM Best Practices
-  file: 02_iam_practices.md
-- title: Guardrails & Policies
-  file: 03_guardrails.md
-- title: vault-submodule-template
-  file: README.md
+title: "detection response"
