feat: Add comprehensive alert rationalization framework
- Complete alert lifecycle management methodology
- 96% volume reduction case study with metrics
- Quality scoring framework and operational metrics
- Statistical threshold tuning approaches
- Implementation phases and governance processes

Addresses alert fatigue through systematic rationalization.

--- a/methodologies/alert-rationalization/framework.yaml
+++ b/methodologies/alert-rationalization/framework.yaml
@@ -50,7 +50,7 @@ foundational_principles:
   core_design:
     
     root_cause_correlation:
-      description: "Intelligent alert grouping presents one consolidated alert for related issues"
+      description: "Intelligent alert grouping presents one consolidated alert for related issues."
       
       implementation:
         - "Map service dependencies explicitly"
